--- a/src/Presentation/Nop.Web/Views2/my-app/package.json
+++ b/src/Presentation/Nop.Web/Views2/my-app/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build2": "react-scripts build && cp -r build/* ../wwwroot/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
